deployment/djangochat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-chat-app
  namespace: django-chat-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: django-chat-app
