deployment/djangochat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: django-chat-app
  namespace: django-chat-app
spec:
  ingressClassName: nginx
  rules:
  - host: chat.farrasyakila.xyz
    http:
      paths:
      - backend:
          service:
            name: django-chat-app
            port:
              number: 8000
        path: /
        pathType: Prefix
